Исправляет классы после проверки валидатором БЭМ

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -975,10 +975,10 @@
                   <li class="traveler-info__item">
                     <span class="country country--sri-lanka">Шри-Ланка</span>
                   </li>
-                  <li class="flags-info__item">
+                  <li class="traveler-info__item">
                     <span class="country country--thailand">Таиланд</span>
                   </li>
-                  <li class="flags-info__item">
+                  <li class="traveler-info__item">
                     <span class="country country--seychelles">Сейшеллы</span>
                   </li>
                 </ul>
@@ -1073,7 +1073,7 @@
                   <li class="traveler-info__item">
                     <span class="country country--belgium">Бельгия</span>
                   </li>
-                  <li class="flags-info__item">
+                  <li class="traveler-info__item">
                     <span class="country country--czech">Чехия</span>
                   </li>
                 </ul>
@@ -1167,10 +1167,10 @@
                   <li class="traveler-info__item">
                     <span class="country country--usa">США</span>
                   </li>
-                  <li class="flags-info__item">
+                  <li class="traveler-info__item">
                     <span class="country country--australia">Австралия</span>
                   </li>
-                  <li class="flags-info__item">
+                  <li class="traveler-info__item">
                     <span class="country country--dominica">Доминика</span>
                   </li>
                 </ul>
@@ -1264,7 +1264,7 @@
                   <li class="traveler-info__item">
                     <span class="country country--uk">Великобритания</span>
                   </li>
-                  <li class="flags-info__item">
+                  <li class="traveler-info__item">
                     <span class="country country--germany">Германия</span>
                   </li>
                 </ul>
