Разделяет ссылку профиля в карточке на две

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -958,6 +958,8 @@
             <li class="catalog__item traveler-card">
               <a class="traveler-card__profile-link" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/tanya-firsova.jpg" width="70" height="70" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
+              </a>
+              <a class="traveler-card__profile-link" href="blank.html">
                 <h3 class="traveler-card__name">Таня Фирсова</h3>
               </a>
 
@@ -1056,6 +1058,8 @@
             <li class="catalog__item traveler-card">
               <a class="traveler-card__profile-link" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/petya-demin.jpg" width="70" height="70" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
+              </a>
+              <a class="traveler-card__profile-link" href="blank.html">
                 <h3 class="traveler-card__name">Петя Демин</h3>
               </a>
 
@@ -1150,6 +1154,8 @@
             <li class="catalog__item traveler-card">
               <a class="traveler-card__profile-link" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/mark-smolov-mobile.jpg" width="70" height="70" alt="Аватар Марка Смолова: татуированный молодой человек в кепке сидит на крыше автомобиля">
+              </a>
+              <a class="traveler-card__profile-link" href="blank.html">
                 <h3 class="traveler-card__name">Марк Смолов</h3>
               </a>
 
@@ -1247,6 +1253,8 @@
             <li class="catalog__item traveler-card">
               <a class="traveler-card__profile-link" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/larisa-rogovaya-mobile.jpg" width="70" height="70" alt="Аватар Ларисы Роговой: улыбающаяся девушка в синем деловом костюме">
+              </a>
+              <a class="traveler-card__profile-link" href="blank.html">
                 <h3 class="traveler-card__name traveler-card__name--online">Лариса Роговая</h3>
               </a>
 
