--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
 
           <ul class="menu__contacts contacts">
             <li class="contacts__item">
-              <a class="contacts__phone" href="tel:88005558628">
+              <a class="contacts__link contacts__link--phone" href="tel:88005558628">
                 <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                   <circle cx="45" cy="45" r="45" fill="#121936" />
                   <path class="contacts__icon" fill-rule="evenodd" clip-rule="evenodd"
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li class="contacts__item">
-              <a class="contacts__email" href="mailto:mail@htmlacademy.ru">
+              <a class="contacts__link contacts__link--email" href="mailto:mail@htmlacademy.ru">
                 <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                   <circle cx="45" cy="45" r="45" fill="#121936" />
                   <path class="contacts__icon" fill-rule="evenodd" clip-rule="evenodd"
@@ -97,10 +97,10 @@
           </ul>
 
           <div class="menu__user-buttons user-buttons">
-            <a class="user-buttons__item" href="tel:88005558628" aria-label="Позвонить нам">
+            <a class="user-buttons__item user-buttons__item--phone" href="tel:88005558628" aria-label="Позвонить нам">
               <img class="user-buttons__icon" src="img/icons/icon_call.svg" width="18" height="18" alt="Иконка звонящей трубки">
             </a>
-            <a class="user-buttons__item" href="mailto:mail@htmlacademy.ru" aria-label="Написать нам">
+            <a class="user-buttons__item user-buttons__item--email" href="mailto:mail@htmlacademy.ru" aria-label="Написать нам">
               <img class="user-buttons__icon" src="img/icons/icon_mail.svg" width="18" height="16" alt="Иконка конверта">
             </a>
             <a class="user-buttons__item button" href="blank.html">Авторизация</a>
