Дорабатывает классы на главной

--- a/source/index.html
+++ b/source/index.html
@@ -473,7 +473,7 @@
     </footer>
 
     <div class="modal modal--business-rates">
-      <h2 class="modal__title">Бизнес-тарифы</h2>
+      <h2 class="modal__title modal__title--orange">Бизнес-тарифы</h2>
 
       <table class="modal__table table">
         <tr class="table__row">
