Удаляет лишние классы из разметки главной

--- a/source/index.html
+++ b/source/index.html
@@ -145,7 +145,7 @@
         <p class="countries__text">Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно там заняться.</p>
 
         <ul class="countries__list">
-          <li class="countries__item country-card country-card--thailand">
+          <li class="countries__item country-card">
             <img class="country-card__image" src="img/country-photos/thailand-mobile.jpg" width="270" height="110" alt="Фотография зеленого тропического острова в насыщенно синей воде">
             <img class="country-card__flag" src="img/flags/Thailand.png" width="35" height="24" alt="Флаг Таиланда">
             <h3 class="country-card__name">Таиланд</h3>
@@ -153,7 +153,7 @@
             <p class="country-card__counter">18321</p>
           </li>
 
-          <li class="countries__item country-card country-card--france">
+          <li class="countries__item country-card">
             <img class="country-card__image" src="img/country-photos/france-mobile.jpg" width="270" height="110"
               alt="Фотография парижской улочки, слева пятиэтажные дома, справа аллея с деревьями">
             <img class="country-card__flag" src="img/flags/France.png" width="35" height="24" alt="Флаг Франции">
@@ -162,7 +162,7 @@
             <p class="country-card__counter">12518</p>
           </li>
 
-          <li class="countries__item country-card country-card--czech">
+          <li class="countries__item country-card">
             <img class="country-card__image" src="img/country-photos/czech-mobile.jpg" width="270" height="110"
               alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
             <img class="country-card__flag" src="img/flags/Czechia.png" width="35" height="24" alt="Флаг Чехии">
@@ -183,7 +183,7 @@
 
         <ul class="companions__list">
           <li class="companions__item companion-card">
-            <img class="companion-card__avatar companion-card__avatar--tanya" src="img/avatars/tanya-firsova.jpg" width="270" height="270" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
+            <img class="companion-card__avatar" src="img/avatars/tanya-firsova.jpg" width="270" height="270" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
             <h3 class="companion-card__name">
               <a class="companion-card__link" href="blank.html">Таня Фирсова</a>
             </h3>
@@ -192,19 +192,19 @@
 
             <ul class="companion-card__flags flags-list">
               <li class="flags-list__item">
-                <img class="flags-list__flag flags-list__flag--sri-lanka" src="img/flags/Sri-Lanka.png" width="35" height="25" alt="Флаг Шри-Ланки">
+                <img class="flags-list__flag" src="img/flags/Sri-Lanka.png" width="35" height="25" alt="Флаг Шри-Ланки">
                 <div class="flags-list__tooltip tooltip" aria-hidden="true">
                   <span class="tooltip__text">Шри-Ланка</span>
                 </div>
               </li>
               <li class="flags-list__item">
-                <img class="flags-list__flag flags-list__flag--thailand" src="img/flags/Thailand.png" width="35" height="25" alt="Флаг Таиланда">
+                <img class="flags-list__flag" src="img/flags/Thailand.png" width="35" height="25" alt="Флаг Таиланда">
                 <div class="flags-list__tooltip tooltip" aria-hidden="true">
                   <span class="tooltip__text">Таиланд</span>
                 </div>
               </li>
               <li class="flags-list__item">
-                <img class="flags-list__flag flags-list__flag--seychelles" src="img/flags/Seychelles.png" width="35" height="25" alt="Флаг Сейшелл">
+                <img class="flags-list__flag" src="img/flags/Seychelles.png" width="35" height="25" alt="Флаг Сейшелл">
                 <div class="flags-list__tooltip tooltip" aria-hidden="true">
                   <span class="tooltip__text">Сейшеллы</span>
                 </div>
@@ -266,7 +266,7 @@
           </li>
 
           <li class="companions__item companion-card">
-            <img class="companion-card__avatar companion-card__avatar--petya" src="img/avatars/petya-demin.jpg" width="270" height="270" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
+            <img class="companion-card__avatar" src="img/avatars/petya-demin.jpg" width="270" height="270" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
             <h3 class="companion-card__name companion-card__name--online">
               <a class="companion-card__link" href="blank.html">Петя Демин</a>
             </h3>
@@ -275,13 +275,13 @@
 
             <ul class="companion-card__flags flags-list">
               <li class="flags-list__item">
-                <img class="flags-list__flag flags-list__flag--belgium" src="img/flags/Belgium.png" width="35" height="25" alt="Флаг Бельгии">
+                <img class="flags-list__flag" src="img/flags/Belgium.png" width="35" height="25" alt="Флаг Бельгии">
                 <div class="flags-list__tooltip tooltip" aria-hidden="true">
                   <span class="tooltip__text">Бельгия</span>
                 </div>
               </li>
               <li class="flags-list__item">
-                <img class="flags-list__flag flags-list__flag--czech" src="img/flags/Czechia.png" width="35" height="25" alt="Флаг Чехии">
+                <img class="flags-list__flag" src="img/flags/Czechia.png" width="35" height="25" alt="Флаг Чехии">
                 <div class="flags-list__tooltip tooltip" aria-hidden="true">
                   <span class="tooltip__text">Чехия</span>
                 </div>
