Поправляет классы главной после ревью

--- a/source/index.html
+++ b/source/index.html
@@ -172,7 +172,7 @@
           </li>
         </ul>
 
-        <a class="countries__button button button--rectangular" href="form.html">Показать все</a>
+        <a class="countries__button button button--index button--normalcase" href="form.html">Показать все</a>
       </section>
 
       <section class="page-main__section page-main__section--dark companions">
@@ -348,7 +348,7 @@
           </li>
         </ul>
 
-        <a class="companions__button button button--rectangular" href="catalog.html">Показать всех</a>
+        <a class="companions__button button button--index button--normalcase" href="catalog.html">Показать всех</a>
       </section>
 
       <section class="page-main__section page-main__section--light rates">
@@ -417,7 +417,7 @@
 
         <div class="address__container">
           <p class="address__address">ул. Большая Конюшенная, 19/8</p>
-          <a class="address__button button button--rectangular button--outline" href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.340477%2C59.933208&mode=routes&rtext=59.931032%2C30.362029~59.938635%2C30.323118&rtt=auto&ruri=~ymapsbm1%3A%2F%2Fgeo%3Fll%3D30.323%252C59.939%26spn%3D0.001%252C0.001%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%25A1%25D0%25B0%25D0%25BD%25D0%25BA%25D1%2582-%25D0%259F%25D0%25B5%25D1%2582%25D0%25B5%25D1%2580%25D0%25B1%25D1%2583%25D1%2580%25D0%25B3%252C%2520%25D0%2591%25D0%25BE%25D0%25BB%25D1%258C%25D1%2588%25D0%25B0%25D1%258F%2520%25D0%259A%25D0%25BE%25D0%25BD%25D1%258E%25D1%2588%25D0%25B5%25D0%25BD%25D0%25BD%25D0%25B0%25D1%258F%2520%25D1%2583%25D0%25BB%25D0%25B8%25D1%2586%25D0%25B0%252C%252019%252F8&z=13.45">Проложить маршрут</a>
+          <a class="address__button button button--index button--outline" href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.340477%2C59.933208&mode=routes&rtext=59.931032%2C30.362029~59.938635%2C30.323118&rtt=auto&ruri=~ymapsbm1%3A%2F%2Fgeo%3Fll%3D30.323%252C59.939%26spn%3D0.001%252C0.001%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%25A1%25D0%25B0%25D0%25BD%25D0%25BA%25D1%2582-%25D0%259F%25D0%25B5%25D1%2582%25D0%25B5%25D1%2580%25D0%25B1%25D1%2583%25D1%2580%25D0%25B3%252C%2520%25D0%2591%25D0%25BE%25D0%25BB%25D1%258C%25D1%2588%25D0%25B0%25D1%258F%2520%25D0%259A%25D0%25BE%25D0%25BD%25D1%258E%25D1%2588%25D0%25B5%25D0%25BD%25D0%25BD%25D0%25B0%25D1%258F%2520%25D1%2583%25D0%25BB%25D0%25B8%25D1%2586%25D0%25B0%252C%252019%252F8&z=13.45">Проложить маршрут</a>
         </div>
 
         <div class="address__map-container">
