Исправляет и добавляет классы

--- a/source/form.html
+++ b/source/form.html
@@ -117,10 +117,10 @@
       <section class="user-profile">
         <h2 class="visually-hidden">Ваш профиль</h2>
 
-        <div class="user-profile__badge level-badge level-badge--profile">
+        <div class="user-profile__badge level-badge">
           <p class="level-badge__text">
-            <span class="level-badge__number">80</span>
-            <span class="level-badge__label">level</span>
+            <span class="level-badge__number level-badge__number--big">80</span>
+            <span class="level-badge__label level-badge__label--big">level</span>
           </p>
           <svg class="level-badge__level-bar level-bar" width="100" height="100" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
             <circle class="level-bar__progress" r="47" cx="50" cy="50" fill="transparent" stroke-dasharray="270" stroke-dashoffset="25" stroke="#FF8D30" stroke-width="3" transform="rotate(-90, 50, 50)" stroke-linecap="round">
