--- a/source/index.html
+++ b/source/index.html
@@ -252,10 +252,10 @@
               </li>
             </ul>
 
-            <div class="companion-card__badge level-badge">
+            <div class="companion-card__badge level-badge level-badge--background">
               <p class="level-badge__text">
-                <span class="level-badge__number">99</span>
-                <span class="level-badge__label">level</span>
+                <span class="level-badge__number level-badge__number--white">99</span>
+                <span class="level-badge__label level-badge__label--white">level</span>
               </p>
               <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                 <circle class="level-bar__progress" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
@@ -333,10 +333,10 @@
               </li>
             </ul>
 
-            <div class="companion-card__badge level-badge">
+            <div class="companion-card__badge level-badge level-badge--background">
               <p class="level-badge__text">
-                <span class="level-badge__number">80</span>
-                <span class="level-badge__label">level</span>
+                <span class="level-badge__number level-badge__number--white">80</span>
+                <span class="level-badge__label level-badge__label--white">level</span>
               </p>
               <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                 <circle class="level-bar__progress" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
