--- a/source/blank.html
+++ b/source/blank.html
@@ -111,7 +111,7 @@
 
     <main class="page-main page-main--inner">
       <div class="page-main__title-container">
-        <h1 class="page-main__title">Пустая страница</h1>
+        <h1 class="page-main__title page-main__title--main">Пустая страница</h1>
       </div>
 
       <section class="page-main__section lost">
