--- a/source/catalog.html
+++ b/source/catalog.html
@@ -111,12 +111,12 @@
 
     <main class="page-main page-main--inner">
       <div class="page-main__title-container">
-        <h1 class="page-main__title">Попутчики</h1>
+        <h1 class="page-main__title page-main__title--main">Попутчики</h1>
       </div>
 
       <section class="page-main__section page-main__section--light filter-country">
-        <h2 class="page-main__title filter-country__title">Фильтрация по странам:</h2>
-        <button class="filter-country__button button button--blue" type="button"><span class="button__text">Показать все</span>  •••</button>
+        <h2 class="page-main__title page-main__title--uppercase filter-country__title">Фильтрация по странам:</h2>
+        <button class="filter-country__button button button--blue button--fading" type="button"><span class="button__text">Показать все</span>  •••</button>
 
         <ul class="filter-country__tabs">
           <li class="filter-country__tab filter-country__tab--current">
@@ -134,7 +134,7 @@
         </ul>
 
         <div class="filter-country__menu filter-country__menu--show">
-          <button class="filter-country__close filter-country__close--top button button--blue" type="button"><span class="button__text">Свернуть</span></button>
+          <button class="filter-country__close filter-country__close--top button button--blue button--fading" type="button"><span class="button__text">Свернуть</span></button>
 
           <ul class="filter-country__tabs filter-country__tabs--inner">
             <li class="filter-country__tab filter-country__tab--current">
@@ -153,7 +153,7 @@
 
           <div class="filter-country__choice-container">
             <div class="filter-country__first-letters">
-              <span class="filter-country__first-letter" tabindex="0">А</span>
+              <span class="filter-country__first-letter filter-country__first-letter--current" tabindex="0">А</span>
               <span class="filter-country__first-letter" tabindex="0">Б</span>
               <span class="filter-country__first-letter" tabindex="0">В</span>
               <span class="filter-country__first-letter" tabindex="0">Г</span>
@@ -820,7 +820,7 @@
             </div>
           </div>
 
-          <button class="filter-country__close filter-country__close--bottom button button--blue" type="button">Свернуть</button>
+          <button class="filter-country__close filter-country__close--bottom button button--dark-blue" type="button">Свернуть</button>
         </div>
       </section>
 
@@ -831,7 +831,7 @@
           <form class="filter-catalog__form form" id="filter-catalog" method="GET" action="https://echo.htmlacademy.ru/">
             <h3 class="filter-catalog__title">Подберите идеального попутчика</h3>
 
-            <fieldset class="filter-catalog__fieldset">
+            <fieldset class="filter-catalog__fieldset form__fieldset form__fieldset--no-border">
               <legend class="filter-catalog__legend">Хобби</legend>
 
               <ul class="filter-catalog__options filter-catalog__options--show">
@@ -952,12 +952,12 @@
         <div class="catalog">
           <ul class="catalog__list">
             <li class="catalog__item traveler-card">
-              <a class="traveler-card__profile-link" href="blank.html">
+              <a class="traveler-card__profile-link traveler-card__profile-link--avatar" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/tanya-firsova.jpg" width="70" height="70" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
               </a>
-              <a class="traveler-card__profile-link" href="blank.html">
-                <h3 class="traveler-card__name">Таня Фирсова</h3>
-              </a>
+              <h3 class="traveler-card__name">
+                <a class="traveler-card__profile-link traveler-card__profile-link--name" href="blank.html">Таня Фирсова</a>
+              </h3>
 
               <div class="traveler-card__likes">
                 <button class="traveler-card__like-button traveler-card__like-button--liked" type="button" aria-label="Лайкнуть"></button>
@@ -985,7 +985,7 @@
               <div class="traveler-card__transport traveler-info">
                 <h4 class="traveler-info__title">Транспорт:</h4>
 
-                <ul class="traveler-card__transport-list transport-list">
+                <ul class="traveler-card__transport-list traveler-info__list transport-list">
                   <li class="transport-list__item">
                     <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
                       <path
@@ -1052,12 +1052,12 @@
             </li>
 
             <li class="catalog__item traveler-card">
-              <a class="traveler-card__profile-link" href="blank.html">
+              <a class="traveler-card__profile-link traveler-card__profile-link--avatar" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/petya-demin.jpg" width="70" height="70" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
               </a>
-              <a class="traveler-card__profile-link" href="blank.html">
-                <h3 class="traveler-card__name">Петя Демин</h3>
-              </a>
+              <h3 class="traveler-card__name">
+                <a class="traveler-card__profile-link traveler-card__profile-link--name" href="blank.html">Петя Демин</a>
+              </h3>
 
               <div class="traveler-card__likes">
                 <button class="traveler-card__like-button" type="button" aria-label="Лайкнуть"></button>
@@ -1082,7 +1082,7 @@
               <div class="traveler-card__transport traveler-info">
                 <h4 class="traveler-info__title">Транспорт:</h4>
 
-                <ul class="traveler-card__transport-list transport-list">
+                <ul class="traveler-card__transport-list traveler-info__list transport-list">
                   <li class="transport-list__item">
                     <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
                       <path
@@ -1148,12 +1148,12 @@
             </li>
 
             <li class="catalog__item traveler-card">
-              <a class="traveler-card__profile-link" href="blank.html">
+              <a class="traveler-card__profile-link traveler-card__profile-link--avatar" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/mark-smolov-mobile.jpg" width="70" height="70" alt="Аватар Марка Смолова: татуированный молодой человек в кепке сидит на крыше автомобиля">
               </a>
-              <a class="traveler-card__profile-link" href="blank.html">
-                <h3 class="traveler-card__name">Марк Смолов</h3>
-              </a>
+              <h3 class="traveler-card__name">
+                <a class="traveler-card__profile-link traveler-card__profile-link--name" href="blank.html">Марк Смолов</a>
+              </h3>
 
               <div class="traveler-card__likes">
                 <button class="traveler-card__like-button" type="button" aria-label="Лайкнуть"></button>
@@ -1181,7 +1181,7 @@
               <div class="traveler-card__transport traveler-info">
                 <h4 class="traveler-info__title">Транспорт:</h4>
 
-                <ul class="traveler-card__transport-list transport-list">
+                <ul class="traveler-card__transport-list traveler-info__list transport-list">
                   <li class="transport-list__item">
                     <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
                       <path
@@ -1247,12 +1247,12 @@
             </li>
 
             <li class="catalog__item traveler-card">
-              <a class="traveler-card__profile-link" href="blank.html">
+              <a class="traveler-card__profile-link traveler-card__profile-link--avatar" href="blank.html">
                 <img class="traveler-card__avatar" src="img/avatars/larisa-rogovaya-mobile.jpg" width="70" height="70" alt="Аватар Ларисы Роговой: улыбающаяся девушка в синем деловом костюме">
               </a>
-              <a class="traveler-card__profile-link" href="blank.html">
-                <h3 class="traveler-card__name traveler-card__name--online">Лариса Роговая</h3>
-              </a>
+              <h3 class="traveler-card__name traveler-card__name--online">
+                <a class="traveler-card__profile-link traveler-card__profile-link--name" href="blank.html">Лариса Роговая</a>
+              </h3>
 
               <div class="traveler-card__likes">
                 <button class="traveler-card__like-button" type="button" aria-label="Лайкнуть"></button>
@@ -1277,7 +1277,7 @@
               <div class="traveler-card__transport traveler-info">
                 <h4 class="traveler-info__title">Транспорт:</h4>
 
-                <ul class="traveler-card__transport-list transport-list">
+                <ul class="traveler-card__transport-list traveler-info__list transport-list">
                   <li class="transport-list__item">
                     <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
                       <path
@@ -1348,7 +1348,7 @@
           <div class="catalog__pagination pagination">
             <ul class="pagination__list">
               <li class="pagination__item pagination__item--current">
-                <a class="pagination__link" href="#">1</a>
+                <a class="pagination__link pagination__link--current">1</a>
               </li>
               <li class="pagination__item">
                 <a class="pagination__link" href="#">2</a>
