Исправляет разметку под сетку

--- a/source/index.html
+++ b/source/index.html
@@ -14,12 +14,12 @@
 
   <body class="page-body">
     <header class="page-header">
-      <div class="page-header__top-bar top-bar">
+      <div class="page-header__top-bar top-bar top-bar--no-js">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
         </a>
 
-        <div class="top-bar__menu menu">
+        <div class="top-bar__menu menu menu--no-js">
           <button class="menu__toggle" type="button" aria-label="Показать меню навигации"></button>
 
           <nav class="menu__navigation navigation">
@@ -134,23 +134,22 @@
       <section class="page-main__section page-main__section--dark about">
         <h2 class="page-main__title page-main__title--orange about__title">О сервисе</h2>
 
-        <p class="about__text">Любое путешествие веселее с&nbsp;попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.</p>
+        <p class="about__text">Любое путешествие веселее с&nbsp;попутчиками, которые на одной волне с&nbsp;тобой! Делитесь своими идеями путешествий и черпайте вдохновение в&nbsp;чужих.</p>
         <p class="about__text about__text--bold">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</p>
 
-        <a class="about__button button" href="blank.html">Подробнее</a>
+        <a class="about__button button button--index button--normalcase" href="blank.html">Подробнее</a>
       </section>
 
       <section class="page-main__section page-main__section--light countries">
         <h2 class="page-main__title page-main__title--orange countries__title">Направления</h2>
 
-        <p class="countries__text">Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно там заняться.</p>
+        <p class="countries__text">Мы не продаем туры и&nbsp;ничего не рекламируем. Люди сами пишут о&nbsp;странах, куда хотели бы отправиться и&nbsp;чем можно там заняться.</p>
 
         <ul class="countries__list">
           <li class="countries__item country-card">
             <img class="country-card__image" src="img/country-photos/thailand-mobile.jpg" width="270" height="110" alt="Фотография зеленого тропического острова в насыщенно синей воде">
-            <img class="country-card__flag" src="img/flags/Thailand.png" width="35" height="24" alt="Флаг Таиланда">
             <div class="country-card__container">
-              <h3 class="country-card__name">Таиланд</h3>
+              <h3 class="country-card__name country-card__name--thailand">Таиланд</h3>
               <p class="country-card__slogan">Джунгли зовут!</p>
               <p class="country-card__counter">18321</p>
             </div>
@@ -159,9 +158,8 @@
           <li class="countries__item country-card">
             <img class="country-card__image" src="img/country-photos/france-mobile.jpg" width="270" height="110"
               alt="Фотография парижской улочки, слева пятиэтажные дома, справа аллея с деревьями">
-            <img class="country-card__flag" src="img/flags/France.png" width="35" height="24" alt="Флаг Франции">
             <div class="country-card__container">
-              <h3 class="country-card__name">Франция</h3>
+              <h3 class="country-card__name country-card__name--france">Франция</h3>
               <p class="country-card__slogan">Трэ бьен, манифик!</p>
               <p class="country-card__counter">12518</p>
             </div>
@@ -170,9 +168,8 @@
           <li class="countries__item country-card">
             <img class="country-card__image" src="img/country-photos/czech-mobile.jpg" width="270" height="110"
               alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
-            <img class="country-card__flag" src="img/flags/Czechia.png" width="35" height="24" alt="Флаг Чехии">
             <div class="country-card__container">
-              <h3 class="country-card__name">Чехия</h3>
+              <h3 class="country-card__name country-card__name--czech">Чехия</h3>
               <p class="country-card__slogan">Закоулки старой Европы</p>
               <p class="country-card__counter">5326</p>
             </div>
