--- a/source/index.html
+++ b/source/index.html
@@ -109,7 +109,7 @@
       </div>
     </header>
 
-    <main class="page-main">
+    <main class="page-main page-main--no-js">
       <h1 class="visually-hidden">Сервис поиска попутчиков «Погнали»</h1>
 
       <section class="page-main__section page-main__section--top promo">
