Задаёт кнопке в форме регистрации модификатор и стили

--- a/source/index.html
+++ b/source/index.html
@@ -400,7 +400,7 @@
         <form class="feedback__form feedback-form" method="POST" action="https://echo.htmlacademy.ru/">
           <label class="visually-hidden" for="feedback-email">Ваш e-mail:</label>
           <input class="feedback-form__input" type="email" id="feedback-email" name="email" placeholder="E-mail">
-          <button class="feedback-form__button button button--rectangular button--normalcase" type="submit" aria-label="Регистрация">
+          <button class="feedback-form__button button button--rectangular button--normalcase button--feedback-form" type="submit" aria-label="Регистрация">
             <span class="button__text">Регистрация</span>
           </button>
         </form>
