Добавляет классы значку уровня

--- a/source/index.html
+++ b/source/index.html
@@ -273,7 +273,7 @@
                   <span class="level-badge__label level-badge__label--white">level</span>
                 </p>
                 <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-                  <circle class="level-bar__progress" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
+                  <circle class="level-bar__progress level-bar__progress--companion-card" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
                     stroke-dashoffset="105" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)" stroke-linecap="round">
                   </circle>
                 </svg>
@@ -357,7 +357,7 @@
                   <span class="level-badge__label level-badge__label--white">level</span>
                 </p>
                 <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-                  <circle class="level-bar__progress" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
+                  <circle class="level-bar__progress level-bar__progress--companion-card" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
                     stroke-dashoffset="125" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)"
                     stroke-linecap="round">
                   </circle>
